# indolentjson-rust

./: Cargo.toml
benches/: compact.rs  nodes.rs
examples/: afl.rs
src/: lib.rs  nodes.rs  parse.rs
