[package]
authors = ["Mark Haines <mjark@negativecurvature.net>"]
name = "indolentjson"
version = "0.1.0"

[dependencies]
itertools = "0.4.15"
linear-map = "1.0.0"
quickcheck = {version = "0.2", optional = true}
quickcheck_macros = {version = "0.2", optional = true}

[features]
quickcheck_test = ["quickcheck", "quickcheck_macros"]  # Enables testing with quickcheck
